[package]
name = "nosql-sql-rust-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
schema_and_dao = { path = "schema_and_dao" }

# Needed for macro generated code
rust_decimal = { version = "1.37", features = [
    "db-tokio-postgres",
    "db-postgres",
    "serde",
    "serde-with-arbitrary-precision",
] }
chrono = "0.4"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
r-lombok-macros = "0.0"

